--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 								<a href="#">
 									<img src="img/logo.png" alt="">
 								</a>
-								<h4>Follow Me</h4>
+								<h4>Hire Me</h4>
 							</div>
 							
 						</div>
