--- a/index.html
+++ b/index.html
@@ -413,6 +413,41 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="col-lg-4 col-md-6 all upcoming">
+							<div class="portfolio_box">
+								<div class="single_portfolio">
+									<img class="img-fluid w-100" src="img/portfolio/dashboard.png" alt="">
+									<div class="overlay"></div>
+									<a href="img/portfolio/dashboard.png" class="img-gal">
+										<div class="icon">
+											<span class="lnr lnr-cross"></span>
+										</div>
+									</a>
+								</div>
+								<div class="short_info">
+									<h4><a href="#">HOME PAGE</a></h4>
+									<p>DMS SYSTEM</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6 all upcoming">
+							<div class="portfolio_box">
+								<div class="single_portfolio">
+									<img class="img-fluid w-100" src="img/portfolio/page2.png" alt="">
+									<div class="overlay"></div>
+									<a href="img/portfolio/page2.png" class="img-gal">
+										<div class="icon">
+											<span class="lnr lnr-cross"></span>
+										</div>
+									</a>
+								</div>
+								<div class="short_info">
+									<h4><a href="#">ADMIN PAGE</a></h4>
+									<p>DMS SYSTEM</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
